Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131366

Incorrect import and linking target hint for Q3DSurfaceWidgetItem

XMLWordPrintable

    • 0a2ff2356 (dev), c0284da01 (6.8), 3a759713e (6.8.1)

      The corresponding library for Q3DSurfaceWidgetItem should be GraphsWidgets instead of Graphs

        For Gerrit Dashboard: QTBUG-131366
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            kitruong Kinh Truong (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes