Fix cmake and qmake instructions for widget items

Fixes: QTBUG-131366
Change-Id: I694cfe262e31593010bc03ac56748680e7996359
Reviewed-by: Alexei Cazacov <alexei.cazacov@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
(cherry picked from commit 0a2ff2356fdea8500f3eb0ed4741ec8a6f6b34e7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit c0284da019413b45071030d4e75314ed70e7d0cd)