src/graphs3d/widget/q3dbarswidgetitem.cpp
@@ -9,7 +9,7 @@ QT_BEGIN_NAMESPACE
 
 /*!
  * \class Q3DBarsWidgetItem
- * \inmodule QtGraphs
+ * \inmodule QtGraphsWidgets
  * \ingroup graphs_3D_widgets
  * \brief The Q3DBarsWidgetItem class provides methods for rendering 3D bar graphs.
  *
